unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/ETCAR_Service_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <description>To Capture Selected Car Details</description>
    <label>Vehicle Booking</label>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>Service Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>