unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Additional_Hours__c.field-meta.xml
<CustomField>
    <fullName>ETC_Additional_Hours__c</fullName>
    <label>Additional Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>