unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Base_Fare__c.field-meta.xml
<CustomField>
    <fullName>ETC_Base_Fare__c</fullName>
    <formula>TEXT(Total_Booking_Cost_With_Vat__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base Fare</label>
    <type>Text</type>
</CustomField>