unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Booking_Cost__c.field-meta.xml
<CustomField>
    <fullName>ETC_Booking_Cost__c</fullName>
    <formula>ETC_Features_Price__c  +  ETCAR_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>