unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Booking_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>ETC_Booking_Group_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Booking Group Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>