unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_BOT_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>ETC_BOT_Customer_Name__c</fullName>
    <formula>ETCAR_Service_Request__r.ETC_Customer_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BOT Customer Name</label>
    <type>Text</type>
</CustomField>