unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETC_Cancellation_Reason__c</fullName>
    <description>To capture booking cancellation reason</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>