unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>ETC_Customer_Name__c</fullName>
    <defaultValue>&quot;SAPCLE&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>