unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Department__c.field-meta.xml
<CustomField>
    <fullName>ETC_Department__c</fullName>
    <defaultValue>&quot;Limo DXB&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>