unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Drop_Off_Landmark__c.field-meta.xml
<CustomField>
    <fullName>ETC_Drop_Off_Landmark__c</fullName>
    <formula>ETST_Drop_Off_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop-Off Landmark</label>
    <type>Text</type>
</CustomField>