unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Duration__c.field-meta.xml
<CustomField>
    <fullName>ETC_Duration__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Hours</fullName>
            </value>
            <value>
                <fullName>5 Hours</fullName>
            </value>
            <value>
                <fullName>8 Hours</fullName>
            </value>
            <value>
                <fullName>10 Hours</fullName>
            </value>
            <value>
                <fullName>Fixed Trip</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Package : 10 Hours</fullName>
                <isActive>false</isActive>
                <label>Package : 10 Hours</label>
            </value>
            <value>
                <fullName>Package : 3 Hours</fullName>
                <isActive>false</isActive>
                <label>Package : 3 Hours</label>
            </value>
            <value>
                <fullName>Package : 5 Hours</fullName>
                <isActive>false</isActive>
                <label>Package : 5 Hours</label>
            </value>
            <value>
                <fullName>Package : 8 Hours</fullName>
                <isActive>false</isActive>
                <label>Package : 8 Hours</label>
            </value>
            <value>
                <fullName>Zone Fare : Fixed Trip</fullName>
                <isActive>false</isActive>
                <label>Zone Fare : Fixed Trip</label>
            </value>
            <value>
                <fullName>Zone Fare : Transfer</fullName>
                <isActive>false</isActive>
                <label>Zone Fare : Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>