unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Features_Price__c.field-meta.xml
<CustomField>
    <fullName>ETC_Features_Price__c</fullName>
    <label>Features Price</label>
    <summarizedField>ETCAR_Service_Request_Sub_Line_Item__c.ETCAR_Price__c</summarizedField>
    <summaryForeignKey>ETCAR_Service_Request_Sub_Line_Item__c.Service_Request_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>