unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Is_Special_Request__c.field-meta.xml
<CustomField>
    <fullName>ETC_Is_Special_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special Request</label>
    <type>Checkbox</type>
</CustomField>