unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Is_Special_Request_BOT__c.field-meta.xml
<CustomField>
    <fullName>ETC_Is_Special_Request_BOT__c</fullName>
    <formula>IF(ETC_Is_Special_Request__c, &#39;yes&#39;, &#39;no&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Special Request BOT</label>
    <type>Text</type>
</CustomField>