unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Passenger_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>ETC_Passenger_Mobile_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passenger Mobile Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>