unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>ETC_Payment_Type__c</fullName>
    <defaultValue>&quot;Visa&quot;</defaultValue>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amex</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>SERVICE RECOVERY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>