unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Pick_UP_Date_Time_BOT__c.field-meta.xml
<CustomField>
    <fullName>ETC_Pick_UP_Date_Time_BOT__c</fullName>
    <formula>MID(TEXT( ETCAR_Pick_UP_Date_Time__c + (4/24)), 9, 2)
&amp;&quot;/&quot;&amp; 
MID(TEXT(ETCAR_Pick_UP_Date_Time__c + (4/24)), 6, 2)
&amp;&quot;/&quot;&amp; 
MID(TEXT(ETCAR_Pick_UP_Date_Time__c + (4/24)), 0, 4)
&amp;&quot; &quot;&amp; 
MID(TEXT(ETCAR_Pick_UP_Date_Time__c + (4/24)), 12, 5)</formula>
    <label>Pick UP Date Time BOT</label>
    <type>Text</type>
</CustomField>