unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Pick_Up_LandMark__c.field-meta.xml
<CustomField>
    <fullName>ETC_Pick_Up_LandMark__c</fullName>
    <formula>ETST_Pick_Up_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick-Up LandMark</label>
    <type>Text</type>
</CustomField>