unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Reference_Number_1__c.field-meta.xml
<CustomField>
    <fullName>ETC_Reference_Number_1__c</fullName>
    <formula>IF( CASESAFEID( ETCAR_Service_Request__r.ET_Account__r.RecordTypeId ) == $Label.ETC_Person_Account_RecordTypeId ,  Name , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reference Number 1</label>
    <type>Text</type>
</CustomField>