unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Region__c.field-meta.xml
<CustomField>
    <fullName>ETC_Region__c</fullName>
    <defaultValue>&quot;Dubai&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>