unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ETC_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>