unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>ETC_Request_Type__c</fullName>
    <formula>ETCAR_Service_Request__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Type</label>
    <type>Text</type>
</CustomField>