unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Requester__c.field-meta.xml
<CustomField>
    <fullName>ETC_Requester__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requester</label>
    <length>255</length>
    <type>Text</type>
</CustomField>