unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Section__c.field-meta.xml
<CustomField>
    <fullName>ETC_Section__c</fullName>
    <defaultValue>&quot;SEC-DXB&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>