unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Unit__c.field-meta.xml
<CustomField>
    <fullName>ETC_Unit__c</fullName>
    <defaultValue>&quot;UNT-DXB&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>