unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETC_Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>ETC_Vehicle_Type__c</fullName>
    <formula>ETCAR_Selecetd_Car__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Type</label>
    <type>Text</type>
</CustomField>