unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETCAR_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Image_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Image Link</label>
    <length>250</length>
    <type>Text</type>
</CustomField>