unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETCAR_Pick_UP_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Pick_UP_Date_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pick UP Date Time</label>
    <type>DateTime</type>
</CustomField>