unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETCAR_Pickup_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Pickup_Zone__c</fullName>
    <label>Pickup Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ETC_Pick_up_Drop_off_Zones</valueSetName>
    </valueSet>
</CustomField>