unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETCAR_Price__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Price__c</fullName>
    <label>Vehicle Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>