unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETCAR_Selecetd_Car__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Selecetd_Car__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Car</label>
    <referenceTo>ETCAR_Car__c</referenceTo>
    <relationshipName>Service_Request_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>