unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETCAR_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>ET_Service_Request__c</referenceTo>
    <relationshipName>Service_Request_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>