unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETST_Drop_Off_To__c.field-meta.xml
<CustomField>
    <fullName>ETST_Drop_Off_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Drop-Off To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>