unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETST_Pick_Up_From__c.field-meta.xml
<CustomField>
    <fullName>ETST_Pick_Up_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pickup From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>