unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/ETST_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Way</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
                <isActive>false</isActive>
                <label>Half Yearly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>On-Demand</fullName>
                <isActive>false</isActive>
                <label>On-Demand</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
                <isActive>false</isActive>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Select Dates</fullName>
                <isActive>false</isActive>
                <label>Select Dates</label>
            </value>
            <value>
                <fullName>Yearly</fullName>
                <isActive>false</isActive>
                <label>Yearly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>