unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/fields/Total_Booking_Cost_With_Vat__c.field-meta.xml
<CustomField>
    <fullName>Total_Booking_Cost_With_Vat__c</fullName>
    <formula>(ETC_Features_Price__c  +  ETCAR_Price__c)*1.05</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Booking Cost (With Vat)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>