unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/validationRules/Blank_Fields_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Blank_Fields_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
NOT($Permission.ETC_Rental_By_Pass_Validations),
OR 
(
ISBLANK( ETST_Pick_Up_From__c ) , ISBLANK( ETST_Drop_Off_To__c ),  ISBLANK( ETC_Guest_Name__c )  
)
)</errorConditionFormula>
    <errorMessage>Fields cannot be blank</errorMessage>
</ValidationRule>