unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/validationRules/Check_From_and_To_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_From_and_To_Values</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.ETC_Rental_By_Pass_Validations),
ETST_Pick_Up_From__c  =  ETST_Drop_Off_To__c
)</errorConditionFormula>
    <errorDisplayField>ETC_Additional_Hours__c</errorDisplayField>
    <errorMessage>Pick-Up location and Drop-Off location cannot be same.</errorMessage>
</ValidationRule>