unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/validationRules/Passenger_Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Passenger_Mobile_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Permission.ETC_Rental_By_Pass_Validations),
NOT(ISBLANK(ETC_Passenger_Mobile_Number__c)),
NOT(REGEX(ETC_Passenger_Mobile_Number__c,&quot;([+971]{4})[0-9]{9}&quot;))
)</errorConditionFormula>
    <errorMessage>Phone number should start with &quot;+971&quot;  followed by 9 digits.</errorMessage>
</ValidationRule>