unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/validationRules/Pick_up_Time_must_be_in_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Pick_up_Time_must_be_in_Future</fullName>
    <active>false</active>
    <description>Pick up date and Time must be in Future</description>
    <errorConditionFormula>AND(
NOT($Permission.ETC_Rental_By_Pass_Validations),
ETCAR_Pick_UP_Date_Time__c &lt;= NOW()
)</errorConditionFormula>
    <errorMessage>Pick up Date Time must be in Future</errorMessage>
</ValidationRule>