unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/validationRules/Special_Characters_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Special_Characters_Check</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
NOT(REGEX( ETC_Guest_Name__c , &quot;^[a-zA-Z0-9_]*$&quot;))
)</errorConditionFormula>
    <errorMessage>Special characters are not allowed, please correct.</errorMessage>
</ValidationRule>