unpackaged/main/default/objects/ETCAR_Service_Request_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETCAR_Service_Request__c</columns>
    <columns>ETC_Guest_Name__c</columns>
    <columns>ETCAR_Status__c</columns>
    <columns>ETCAR_Pick_UP_Date_Time__c</columns>
    <columns>ETST_Pick_Up_From__c</columns>
    <columns>ETST_Drop_Off_To__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>